Detalles del Job Card

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
                     <div class="job-info-text">
                     <div class="workinsihts">
                         <p>Photoshop</p> 
-                        <p>New</p>
-                        <p>Featured</p>
+                        &nbsp
+                        <p class="badge">NEW</p>
+                        &nbsp
+                        <p class="badge1">FEATURED</p>
                     </div>
                     <span>Senior Frontend Developer</span>
                     
