--- a/index.html
+++ b/index.html
@@ -25,11 +25,25 @@
                         &nbsp
                         <p class="badge1">FEATURED</p>
                     </div>
-                    <span>Senior Frontend Developer</span>
+                    <span class="ocupation">Senior Frontend Developer</span>
                     
                     <div class="require">
                         <p>1d ago</p> 
+                        &nbsp
+                        &nbsp
+                        &nbsp
+                        <p> &bull;</p>
+                        &nbsp
+                        &nbsp
+                        &nbsp
                         <p>Full time</p>
+                        &nbsp
+                        &nbsp
+                        &nbsp
+                        <p> &bull;</p>
+                        &nbsp
+                        &nbsp
+                        &nbsp
                         <p>Usa only</p>
                     </div>
                    </div>
