card job terminado

--- a/index.html
+++ b/index.html
@@ -49,10 +49,22 @@
                    </div>
                     </div>
                     <div class="skills">
-                        <p>Frontend</p> 
+                        <p>Frontend</p>
+                        &nbsp
+                        &nbsp
+                        &nbsp 
                         <p>Senior</p>
+                        &nbsp
+                        &nbsp
+                        &nbsp
                         <p>Html</p>
+                        &nbsp
+                        &nbsp
+                        &nbsp
                         <p>Css</p>
+                        &nbsp
+                        &nbsp
+                        &nbsp
                         <p>Javascript</p>
                     </div>
                 </article>
